src/OpenCvSharp.Native/include/open_cv_sharp/objdetect/aruco.h

typedef struct jyppx_ocv_mcc_checker jyppx_ocv_mcc_checker;
typedef struct jyppx_ocv_mcc_checker_detector jyppx_ocv_mcc_checker_detector;
typedef struct jyppx_ocv_mcc_detector_params
{
    int adaptive_thresh_win_size_min;
    int adaptive_thresh_win_size_max;
    int adaptive_thresh_win_size_step;
    double adaptive_thresh_constant;
    double min_contours_area_rate;
    double min_contours_area;
    double confidence_threshold;
    double min_contour_solidity;
    double find_candidates_approx_poly_dp_eps_multiplier;
    int border_width;
    float b0_factor;
    float max_error;
    int min_contour_points_allowed;
    int min_contour_length_allowed;
    int min_inter_contour_distance;
    int min_inter_checker_distance;
    int min_image_size;
    int min_group_size;
} jyppx_ocv_mcc_detector_params;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_process_with_roi(
    jyppx_ocv_mcc_checker_detector* detector,
    const jyppx_ocv_mat* image,
    const int* rois,
    int roi_count,
    int nc,
    int* detected);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_get_best_color_checker(
    const jyppx_ocv_mcc_checker_detector* detector,
    jyppx_ocv_mcc_checker** checker,
    int* has_checker);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_get_list_color_checker_count(
    const jyppx_ocv_mcc_checker_detector* detector,
    int* checker_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_get_list_color_checker_fill(
    const jyppx_ocv_mcc_checker_detector* detector,
    jyppx_ocv_mcc_checker** checkers,
    int checker_capacity,
    int* checker_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_draw(
    jyppx_ocv_mcc_checker_detector* detector,
    const jyppx_ocv_mcc_checker* const* checkers,
    int checker_count,
    jyppx_ocv_mat* image,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_get_ref_colors(
    const jyppx_ocv_mcc_checker_detector* detector,
    jyppx_ocv_mat** ref_colors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_get_detection_params(
    const jyppx_ocv_mcc_checker_detector* detector,
    jyppx_ocv_mcc_detector_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_set_detection_params(
    jyppx_ocv_mcc_checker_detector* detector,
    const jyppx_ocv_mcc_detector_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_get_color_chart_type(
    const jyppx_ocv_mcc_checker_detector* detector,
    int* chart_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_set_color_chart_type(
    jyppx_ocv_mcc_checker_detector* detector,
    int chart_type);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_get_use_dnn_model(
    const jyppx_ocv_mcc_checker_detector* detector,
    int* use_dnn_model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_mcc_checker_detector_set_use_dnn_model(
    jyppx_ocv_mcc_checker_detector* detector,
    int use_dnn_model);