src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.Aruco.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_process_with_roi")]
        internal static partial int MccCheckerDetectorProcessWithRoi(IntPtr detector, IntPtr image, int* rois, int roiCount, int nc, out int detected);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_best_color_checker")]
        internal static partial int MccCheckerDetectorGetBestColorChecker(IntPtr detector, out IntPtr checker, out int hasChecker);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_list_color_checker_count")]
        internal static partial int MccCheckerDetectorGetListColorCheckerCount(IntPtr detector, out int checkerCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_list_color_checker_fill")]
        internal static partial int MccCheckerDetectorGetListColorCheckerFill(IntPtr detector, IntPtr[] checkers, int checkerCapacity, out int checkerCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_draw")]
        internal static partial int MccCheckerDetectorDraw(IntPtr detector, IntPtr[] checkers, int checkerCount, IntPtr image, double colorV0, double colorV1, double colorV2, double colorV3, int thickness);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_ref_colors")]
        internal static partial int MccCheckerDetectorGetRefColors(IntPtr detector, out IntPtr refColors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_detection_params")]
        internal static partial int MccCheckerDetectorGetDetectionParams(IntPtr detector, out MccDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_set_detection_params")]
        internal static partial int MccCheckerDetectorSetDetectionParams(IntPtr detector, ref MccDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_color_chart_type")]
        internal static partial int MccCheckerDetectorGetColorChartType(IntPtr detector, out int chartType);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_set_color_chart_type")]
        internal static partial int MccCheckerDetectorSetColorChartType(IntPtr detector, int chartType);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_get_use_dnn_model")]
        internal static partial int MccCheckerDetectorGetUseDnnModel(IntPtr detector, out int useDnnModel);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_set_use_dnn_model")]
        internal static partial int MccCheckerDetectorSetUseDnnModel(IntPtr detector, int useDnnModel);
    }
}
#endif
